# scorep_plugin_topdown

./: .gitmodules  AUTHORS  CMakeLists.txt  LICENSE  README.md
doc/: architecture.md
include/: metric.hpp  perf_util.hpp  plugin.hpp
src/: metric.cpp  perf_util.cpp  plugin.cpp
